Fix: Unselected Tab - Last visible tab seperator

--- a/userChrome.css
+++ b/userChrome.css
@@ -138,13 +138,13 @@
   }
 
   /** Unselected Tab - Divide line ********************************************/
-  #tabbrowser-arrowscrollbox:not([overflowing]) tab.tabbrowser-tab[first-visible-unpinned-tab] .tab-background::before,
-  tab.tabbrowser-tab:not(:hover):not([visuallyselected]):not([multiselected]):not(:first-child) .tab-background::before {
+  #tabbrowser-arrowscrollbox:not([overflowing]) .tabbrowser-tab[first-visible-unpinned-tab] .tab-background::before,
+  .tabbrowser-tab:not([visuallyselected], [multiselected], :hover, :first-child) .tab-background::before,
+  #tabbrowser-arrowscrollbox:not([overflowing]) .tabbrowser-tab:not([visuallyselected], [multiselected], :hover)[last-visible-tab] .tab-background::after {
     /* Box Model */
     content:  "";
     display:  block;
     position: absolute;
-    left: -2px;
     top:   50%;
 
     /* Bar shape */
@@ -154,13 +154,20 @@
 
     /* Bar Color */
     opacity: var(--tab-separator-opacity);
-    transform: translateX(-0.5px) translateY(calc(-50% + 1px));
     transition: opacity .2s var(--ease-basic) !important;
     background-color: var(--toolbarseparator-color) !important;
   }
 
-  tab.tabbrowser-tab:is([visuallyselected], [multiselected], :hover) + tab.tabbrowser-tab .tab-background::before,
-  tab.tabbrowser-tab[first-visible-unpinned-tab]:is([visuallyselected], [multiselected], :hover) .tab-background::before,
+  .tab-background::before {
+    transform: translateX(-2.5px) translateY(calc(-50% + 1px));
+  }
+  .tabbrowser-tab[last-visible-tab] .tab-background::after {
+    right: 0;
+    transform: translateX(2.5px) translateY(calc(-50% + 1px));
+  }
+
+  .tabbrowser-tab:is([visuallyselected], [multiselected], :hover) + tab.tabbrowser-tab .tab-background::before,
+  .tabbrowser-tab[first-visible-unpinned-tab]:is([visuallyselected], [multiselected], :hover) .tab-background::before,
   #tabbrowser-arrowscrollbox[overflowing] tab.tabbrowser-tab[first-visible-unpinned-tab] .tab-background::before {
     opacity: 0 !important;
   }
